fix streaming to mutable list